# koboi-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.a2a.yml  docker-compose.langfuse.yml  docker-compose.yml  nginx.conf  pyproject.toml  research_findings.jsonl
.claude/rules/: builtin-tools.md  tests.md
.claude/skills/: creating-hooks.md  creating-tools.md  yaml-config.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  ci.yml  docker.yml  eval-ragas-nightly.yml  release.yml
benchmarks/: skills_baseline.py
benchmarks/crash_recovery/: run.py
configs/: CLAUDE.md  a2a_dag_remote.yaml  a2a_docker_x.yaml  a2a_docker_y.yaml  a2a_instance_x.yaml  a2a_instance_y.yaml  advanced_full.yaml  advanced_orchestrated.yaml  aegis_ops_full.yaml  anthropic_apikey.yaml  anthropic_chat.yaml  anthropic_oauth.yaml  benchmark_baseline.yaml  benchmark_eval.yaml  cloudflare_worker.yaml  coding_agent.yaml  coding_autonomy_full.yaml  command_hook_notify.yaml  conditional_demo.yaml  cs_confidence_handover.yaml  customer_service.yaml  dag_demo.yaml  deep_research_demo.yaml  dynamic_demo.yaml  e2e_full.yaml  eval_suite.yaml  hitl_demo.yaml  jobs_webhooks.yaml  orchestrated.yaml  proactive_memory.yaml  rag_agent.yaml  rag_eval.yaml  reasoning_model.yaml  sales_agent.yaml  sandbox_restricted.yaml  self_healing_demo.yaml  server_deploy.yaml  server_simple.yaml  simple_chat.yaml  swe_bench.yaml  (+3 more)
data/aegis_kb/: faq.md  runbooks.md
data/e2e/: ecommerce_kb.md  hotel_operations.md
docker/: docker-compose.yml
docs/: a2a-smoke.md  agentic-vs-autonomous-strategy.md  architecture.md  channel-bridge.md  competitor-enterprise-benchmark.md  custom-hooks.md  deep-research-plan.md  deep-research-smoke.md  deterministic-workflow-export-strategy.md  enterprise-objectives-capability-map.md  eve-gap-analysis.md  multimodal-generation-strategy.md  one-pager-api-platform.md  open-core-extension-strategy.md  performance-benchmarking.md  rag-production-readiness-eval.md  rest-sse-requirements.md  self-healing-feasibility.md  self-healing-strategy.md  serverless-koboi-less-feasibility.md  skills-architecture-research.md  strategic-product-audit.md  trustworthy-unattended-autonomy.md
eval_baselines/: baseline_routing.json  rag_retrieval.json
evals/: aegis_ops.eval.py  coding_fix.eval.py  coding_patch.eval.py  deep_research_citations.eval.py  deep_research_faithfulness.eval.py  deep_research_golden.yaml  deep_research_mock.eval.py  deep_research_prod_adversarial.eval.py  deep_research_prod_comparative.eval.py  deep_research_prod_multifaceted.eval.py  deep_research_prod_recency.eval.py  guardrail_block.eval.py  guardrail_output_warn.eval.py  mode_blocked.eval.py  multi_turn.eval.py  no_tools.eval.py  rag_abstention.eval.py  rag_abstention_live.eval.py  rag_answer_correctness.eval.py  rag_citations.eval.py  rag_hybrid_ranking.eval.py  rag_hyde_recall.eval.py  rag_ingestion_fidelity.eval.py  rag_metadata_filter.eval.py  rag_noise_faithfulness.eval.py  rag_noise_robustness.eval.py  rag_ranking.eval.py  rag_ranking_ci.eval.py  rag_rerank_wiring.eval.py  rag_retrieval.eval.py  rag_semantic_ranking.eval.py  ragas_faithfulness.eval.py  ragas_golden_suite.eval.py  ragas_ir_adversarial.eval.py  ragas_ir_id_native.eval.py  ragas_ir_rerank.eval.py  ragas_ir_suite.eval.py  skill_activation.eval.py  weather.eval.py
examples/: 01_simple_chat.py  01_simple_chat.yaml  02_config_showcase.py  03_tool_use_single.py  03_tool_use_single.yaml  04_tool_use_multi.py  04_tool_use_multi.yaml  05_context_management.py  05_context_management.yaml  06_rag_basics.py  06_rag_basics.yaml  07_guardrails.py  07_guardrails.yaml  08_rag_advanced.py  08_rag_advanced.yaml  09_mcp_client.py  09_mcp_client.yaml  10_mcp_server.py  11_policy_engine.py  12_custom_hooks.py  12_custom_hooks.yaml  13_skills_discovery.py  13_skills_discovery.yaml  14_custom_tools.py  14_custom_tools.yaml  15_orchestration_keyword.py  16_orchestration_llm.py  17_anthropic_provider.py  17_anthropic_provider.yaml  18_harness_telemetry.py  18_harness_telemetry.yaml  19_doom_loop_detection.py  20_carryover_state.py  21_eval_suite.py  21_eval_suite.yaml  22_full_production.py  22_full_production.yaml  23_swe_bug_hunter.py  23_swe_bug_hunter.yaml  24_config_driven_orchestration.py  (+37 more)
koboi/: __init__.py  __main__.py  _extensions_path.py  checkpoint.py  cli.py  cli_commands.py  client.py  config.py  config_models.py  diagnostics.py  events.py  exceptions.py  facade.py  journal.py  logger.py  loop.py  loop_pipeline.py  memory.py  memory_sqlite.py  modes.py  notifications.py  plugins.py  proactive_memory.py  redact.py  self_consistency.py  subagent.py  task.py  tokens.py  tracing_context.py  trust.py  types.py
mcp_servers/: todo_server.py
scripts/: README.md  a2a_docker_smoke.py  build_id_native_corpus.py  build_ir_corpus.py  generate_rag_golden.py  live_dr_combined.py  live_media_smoke.py  live_smoke_rerun.py  reload-model.sh  run_baseline.py  verify_rag_issues.py
shell/: koboi.plugin.zsh
tests/: conftest.py  test_a2a_integration.py  test_a2a_real_smoke.py  test_agent_card.py  test_agentdef_serialize.py  test_approval_mode_ordering.py  test_async_callback_approval.py  test_background_shell.py  test_bfcl_loader_cov.py  test_budget.py  test_calculator_security.py  test_calibration.py  test_call_peer_agent.py  test_carryover.py  test_carryover_hook.py  test_checkpoint.py  test_checkpoint_resume.py  test_cli.py  test_cli_commands.py  test_cli_cov.py  test_cli_facade_coverage_gaps.py  test_cli_graph.py  test_cli_serve_bind.py  test_cli_sessions.py  test_cli_workflows.py  test_client.py  test_client_expanded.py  test_client_stream_retry.py  test_coding_eval_e2e.py  test_command_hook.py  test_command_palette.py  test_compaction_integration.py  test_conditional_edges.py  test_config.py  test_config_cov.py  test_config_to_yaml.py  test_context.py  test_context_coding.py  test_context_fact_retention.py  test_context_hook.py  (+272 more)
(+1607 files in other folders)
