[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koboi-agent"
version = "0.3.0"
description = "Universal configurable AI agent framework — production-grade, YAML-driven, open-source ready."
license = "MIT"
readme = "README.md"
authors = [{name = "Koboi Contributors"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/koboi-ai/koboi-agent"
Repository = "https://github.com/koboi-ai/koboi-agent"
Documentation = "https://github.com/koboi-ai/koboi-agent#readme"

[project.optional-dependencies]
tracing = ["langfuse>=2.0,<3.0"]
tui = ["rich>=13.0", "textual>=0.40", "click>=8.0", "prompt_toolkit>=3.0", "rapidfuzz>=3.0"]
eval-ragas = ["ragas>=0.2", "datasets>=2.14"]
eval-gaia = ["datasets>=2.14", "pandas>=2.0"]
eval-swe-bench = ["datasets>=2.14", "pandas>=2.0"]
eval-deepeval = ["deepeval>=0.20"]
eval-all = ["ragas>=0.2", "datasets>=2.14", "pandas>=2.0", "deepeval>=0.20"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-cov", "pytest-benchmark>=4.0", "ruff>=0.4.0", "mypy~=1.19.1", "types-PyYAML"]
all = [
    "langfuse>=2.0,<3.0",
    "rich>=13.0", "textual>=0.40", "click>=8.0", "prompt_toolkit>=3.0", "rapidfuzz>=3.0",
    "ragas>=0.2", "datasets>=2.14", "pandas>=2.0", "deepeval>=0.20",
    "pytest>=7.0", "pytest-asyncio>=0.23", "pytest-cov", "pytest-benchmark>=4.0", "ruff>=0.4.0", "mypy~=1.19.1", "types-PyYAML",
]

[project.scripts]
koboi = "koboi.cli:main"

[project.entry-points."koboi.providers"]
# External packages can register LLM providers here
# Example: my_provider = "my_package.llm:register"

[project.entry-points."koboi.guardrails"]
# External packages can register guardrails here
# Example: my_guardrail = "my_package.guardrails:register"

[project.entry-points."koboi.scorers"]
# External packages can register eval scorers here
# Example: my_scorer = "my_package.scorers:register"

[project.entry-points."koboi.tools"]
# External packages can register tools here
# Example: my_tool = "my_package.tools:register"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
# examples/data/buggy_code/ holds deliberately-buggy fixtures for the
# SWE-bug-hunter demo -- lint errors there are intentional, not regressions.
extend-exclude = ["examples/data/buggy_code"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true

[tool.setuptools.packages.find]
include = ["koboi*"]

[tool.setuptools.package-data]
"koboi" = ["py.typed"]
"koboi.tui" = ["app.tcss"]

[tool.bandit]
# B602: subprocess with shell=True — intentional in shell tool
# B603/B604: subprocess without shell=False — intentional in shell tool
# B404: import subprocess — intentional
# B107: hardcoded_password_default — false positive on optional credential
#        params (api_key/secret_key defaulting to "" / None), not real secrets.
#        Real hardcoded secrets are still caught by B105 (kept active).
# B608: hardcoded_sql_expressions — false positive on parameterized IN (?,…)
#        clauses (placeholders interpolated, values bound). See koboi/journal.py.
exclude_dirs = ["tests", ".venv"]
skips = ["B602", "B603", "B604", "B404", "B107", "B608"]
