[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koboi-agent"
version = "0.19.0"
description = "Universal configurable AI agent framework — production-grade, YAML-driven, open-source ready."
license = "MIT"
readme = "README.md"
authors = [{name = "Koboi Contributors"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/hedypamungkas/koboi-agent"
Repository = "https://github.com/hedypamungkas/koboi-agent"
Documentation = "https://github.com/hedypamungkas/koboi-agent#readme"

[project.optional-dependencies]
tracing = ["langfuse>=2.0,<3.0"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
tui = ["rich>=13.0", "textual>=0.40", "click>=8.0", "prompt_toolkit>=3.0", "rapidfuzz>=3.0"]
# Issue #3: optional real tokenizer for accurate OpenAI token counts (chars/3
# heuristic is the fallback when this extra is absent).
tokenizer = ["tiktoken>=0.7"]
# NOTE: HARD network isolation for the restricted sandbox uses seccomp, which is a
# SYSTEM package (Debian/Ubuntu: `apt install python3-seccomp`), NOT a PyPI dep --
# the libseccomp Python bindings are not published on PyPI. See koboi/sandbox/CLAUDE.md.
eval-ragas = ["ragas>=0.2", "datasets>=2.14"]
eval-gaia = ["datasets>=2.14", "pandas>=2.0"]
eval-swe-bench = ["datasets>=2.14", "pandas>=2.0"]
eval-deepeval = ["deepeval>=0.20"]
eval-all = ["ragas>=0.2", "datasets>=2.14", "pandas>=2.0", "deepeval>=0.20"]
# RAG document ingestion: format parsers + remote object storage (all optional).
rag = ["pypdf>=4.0", "python-docx>=1.1", "pdfplumber>=0.11"]
rag-cloud = ["boto3>=1.34"]
media-cloud = ["boto3>=1.34"]
# Optional local cross-encoder rerank (heavy: pulls torch + sentence-transformers).
# Default rerank backends are the hosted Jina/Cohere APIs (no extra needed); this enables
# `rag.rerank.provider: local` for no-egress/sovereignty deployments.
rerank-local = ["sentence-transformers>=2.7"]
# Optional Indonesian NLP (stemmer) for the lexical retrievers -- enables `rag.stemmer: id`
# so inflected forms (meN-/-kan/-i/-an) match their root. Pure-Python, lightweight.
indo-nlp = ["Sastrawi>=1.0.1"]
# Websearch readability extraction (boilerplate removal for web_fetch / RAG html source).
# Optional -- when absent, web_fetch falls back to the stdlib regex extractor.
websearch = ["trafilatura>=1.12"]
# JS-rendered fetch provider (Playwright). NOTE: Playwright's browser engine is a
# SYSTEM-level install (`playwright install chromium`), not a pure-Python dep -- analogous
# to the seccomp system package above. Requires sandbox.backend: restricted at runtime.
browser = ["playwright>=1.40"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-cov", "pytest-benchmark>=4.0", "ruff>=0.4.0", "mypy>=1.19.1,<2.4.0", "bandit>=1.9", "types-PyYAML"]
all = [
    "langfuse>=2.0,<3.0",
    "fastapi>=0.110", "uvicorn[standard]>=0.27",
    "rich>=13.0", "textual>=0.40", "click>=8.0", "prompt_toolkit>=3.0", "rapidfuzz>=3.0",
    "tiktoken>=0.7",
    "trafilatura>=1.12",
    "ragas>=0.2", "datasets>=2.14", "pandas>=2.0", "deepeval>=0.20",
    "sentence-transformers>=2.7", "Sastrawi>=1.0.1",
    "pytest>=7.0", "pytest-asyncio>=0.23", "pytest-cov", "pytest-benchmark>=4.0", "ruff>=0.4.0", "mypy>=1.19.1,<2.4.0", "bandit>=1.9", "types-PyYAML",
]

[project.scripts]
koboi = "koboi.cli:main"

[project.entry-points."koboi.providers"]
# External packages can register LLM providers here
# Example: my_provider = "my_package.llm:register"

[project.entry-points."koboi.guardrails"]
# External packages can register guardrails here
# Example: my_guardrail = "my_package.guardrails:register"

[project.entry-points."koboi.scorers"]
# External packages can register eval scorers here
# Example: my_scorer = "my_package.scorers:register"

[project.entry-points."koboi.tools"]
# External packages can register tools here
# Example: my_tool = "my_package.tools:register"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "smoke: quick E2E smoke tests (~2 min, requires live server)",
    "e2e: full end-to-end tests against live Docker deployment (~10-15 min)",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
# examples/data/buggy_code/ holds deliberately-buggy fixtures for the
# SWE-bug-hunter demo -- lint errors there are intentional, not regressions.
extend-exclude = ["examples/data/buggy_code"]

[tool.ruff.lint]
# E/F/W: base pycodestyle + pyflakes.
# B:  bugbear -- real bug patterns (e.g. zip-without-strict, raise-without-from,
#     loop-variable-closure). Correctness fixes, not style.
# UP: pyupgrade -- modernize to py310+ (e.g. Optional[X] -> X | None, already
#     mandated by CLAUDE.md; UP catches stragglers).
# C4: comprehension cleanup.
# I (isort) and SIM are intentionally deferred: enabling I would reformat ~94
# files and SIM ~33, both high-churn and likely to conflict with in-flight
# feature branches. Revisit after worktree-multi-provider-modes merges.
select = ["E", "F", "W", "B", "UP", "C4"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
# Forward-prep for when `I` is enabled: keep stdlib -> third-party -> koboi grouping.
known-first-party = ["koboi"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true

[tool.setuptools.packages.find]
include = ["koboi*"]

[tool.setuptools.package-data]
"koboi" = ["py.typed"]
"koboi.tui" = ["app.tcss"]

[tool.bandit]
# B602: subprocess with shell=True — intentional in shell tool
# B603/B604: subprocess without shell=False — intentional in shell tool
# B404: import subprocess — intentional
# B107: hardcoded_password_default — false positive on optional credential
#        params (api_key/secret_key defaulting to "" / None), not real secrets.
#        Real hardcoded secrets are still caught by B105 (kept active).
# B608: hardcoded_sql_expressions — false positive on parameterized IN (?,…)
#        clauses (placeholders interpolated, values bound). See koboi/journal.py.
exclude_dirs = ["tests", ".venv"]
skips = ["B602", "B603", "B604", "B404", "B107", "B608"]
